--- a/style.css
+++ b/style.css
@@ -224,10 +224,10 @@ main p {
 }
 .content-8 {
   background: url("assets/about/about_01.jpg");
-  background-repeat: repeat bottom center;
+  background-size: 700px;
+  background-repeat: no-repeat;
   background-position: center;
-
-  margin: 12% 20% 20% 8%;
+  background-attachment: local;
 
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
